--- a/index.html
+++ b/index.html
@@ -6,100 +6,104 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="padding-top: 40px;">
+    <!-- <h1 style="padding-top: 40px;">
         Introducing HomeMind: A Smarter Way to Protect Your Belongings
-    </h1>
-
-    <div class="margin">
+    </h1> -->
 
 
-        <div class="section">
-            <h2 class="section-title">What Is HomeMind?</h2>
-            <div class="paragraph">
-                HomeMind uses advanced AI technology to make documenting your belongings easier than
-                ever. By combining multiple AI models, we’ve created a powerful tool that helps homeowners
-                and renters gather photographic and written proof of their items quickly and efficiently. Whether
-                you take 10-15 photos or record a short video, HomeMind automatically catalogs your
-                belongings into an organized list—perfect for insurance claims and peace of mind.
+
+
+        <div class="section black-background opaque-bg" style="background-image: url(/assets/pexels-jvdm-1457842.jpg); background-position: top 50% left 25%;">
+            <div class="container">
+                <h2 class="section-title">What Is HomeMind?</h2>
+                <div class="paragraph">
+                    HomeMind uses AI to document your belongings with just a few photos or a video. It automatically creates a detailed, organized list of your items—perfect for insurance claims.
+                </div>
             </div>
         </div>
 
-        <div class="section">
-            <h2 class="section-title">Who Is It For?</h2>
-            <div class="paragraph">
-                HomeMind is designed for homeowners and renters who want to protect the value of their
-                belongings. Most people don’t realize how much proof insurance companies require until it’s too
-                late. With HomeMind, you’ll be prepared ahead of time with the documentation needed to
-                ensure your insurance claims are properly supported.
+        <div class="section opaque-bg-white" style="background-image: url(/assets/image1_preflightchecklist_packinglist.avif);">
+
+            <div class="container">
+                <h2 class="section-title">Who Is It For?</h2>
+                <div class="paragraph">
+                    Homeowners and renters who want to protect the value of their belongings. Insurance companies often require more proof than expected—HomeMind ensures you’re ready.
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="section black-background opaque-bg" style="background-image: url(/assets/360_F_1041679059_LnhR8cp75zvx9ZzMTZd7R5qATdVKUD7o.jpg);">
+            <div class="container">
+                <h2 class="section-title">How HomeMind Helps</h2>
+                <div class="paragraph">
+                    Quickly catalog your belongings in minutes. HomeMind’s AI identifies items, even in clutter, and records important details like brand names or titles.
+                </div>
+            </div>
+        </div>
+        <div class="section opaque-bg-white" style="background-image: url(/assets/pexels-fotoaibe-1571458.jpg);">
+            <div class="container">
+                <h2 class="section-title">Why It Matters</h2>
+                <div class="paragraph">
+                    Insurance companies are notorious for trying to reduce payouts. HomeMind is a security measure for you,
+                    ensuring that your valuables are accurately recorded before any unforeseen events.
+                </div>
             </div>
         </div>
 
 
-        <div class="section">
-            <h2 class="section-title">Why It Matters</h2>
-            <div class="paragraph">
-                Insurance companies are notorious for trying to reduce payouts, especially when there's little
-                documentation to prove the value of your belongings. HomeMind is a security measure for you,
-                ensuring that your valuables are accurately recorded before any unfortunate events, like natural
-                disasters or home damage.
+        <!-- <div class="section black-background opaque-bg" style="background-image: url(assets/pexels-jvdm-1457842.jpg); background-position: top 50% left 25%;">
+            <div class="container">
+                <h2 class="section-title">Why You Should Be Interested</h2>
+                <div class="paragraph">
+                    HomeMind is easy to use, time-saving, and affordable. Its AI models excel at identifying even
+                    the smallest or most cluttered items, giving you a detailed inventory in no time. Whether you
+                    need it for peace of mind or to ensure you're ready for any insurance claims, HomeMind gives
+                    you the protection you need.
+                </div>
+            </div>
+        </div> -->
+
+        <div class="section black-background">
+            <div class="container">
+                <h2 class="section-title">Want to Know More?</h2>
+                <div class="paragraph">
+                    If you're interested in this app or want to be updated on its development, please leave your
+                    email below. We’ll keep you informed as we continue to bring HomeMind to life.
+                </div>
+
+
+                <form action="https://submit-form.com/yU75YQica" style="display: flex; justify-content: center; flex-direction: column; align-items: center; justify-self: center;"
+
+                >
+
+                    <div style="display: flex; justify-content: center; flex-direction: column;">
+                        <label for="email">Email</label>
+                        <input class="email-input custom-width" type="email" id="email" name="email" placeholder="Email" required class="custom-width"/>
+
+                    </div>
+
+                    <div style="display: flex; justify-content: center; flex-direction: column;" >
+                        <label for="message">Message (Optional)</label>
+                        <textarea
+                            class="message-input custom-width"
+                        id="message"
+                        name="message"
+                        placeholder="Message"
+                        class="custom-width"
+                        ></textarea>
+
+                    </div>
+
+
+                    <button type="submit" style="margin-top: 10px;">Send</button>
+                </form>
             </div>
         </div>
 
-        <div class="section">
-            <h2 class="section-title">How HomeMind Helps</h2>
-            <div class="paragraph">
-                In just a few minutes, you can have an entire catalog of your belongings, excluding items like
-                jewelry or fine art that require appraisals. HomeMind’s AI is incredibly efficient at recognizing
-                and listing everyday items—even when they’re cluttered. It can read brand names and titles on
-                objects like books, helping you keep track of everything with incredible accuracy.
-            </div>
-        </div>
 
-        <div class="section">
-            <h2 class="section-title">Why You Should Be Interested</h2>
-            <div class="paragraph">
-                HomeMind is easy to use, time-saving, and affordable. Its AI models excel at identifying even
-                the smallest or most cluttered items, giving you a detailed inventory in no time. Whether you
-                need it for peace of mind or to ensure you're ready for any insurance claims, HomeMind gives
-                you the protection you need.
-            </div>
-        </div>
-
-        <div class="section">
-            <h2 class="section-title">Want to Know More?</h2>
-            <div class="paragraph">
-                If you're interested in this app or want to be updated on its development, please leave your
-                email below. We’ll keep you informed as we continue to bring HomeMind to life.
-            </div>
-        </div>
-    </div>
-
-
-    <form action="https://submit-form.com/yU75YQica" style="display: flex; justify-content: center; flex-direction: column; align-items: center; justify-self: center;"
-
-    >
-
-        <div style="display: flex; justify-content: center; flex-direction: column;">
-            <label for="email">Email</label>
-            <input class="email-input custom-width" type="email" id="email" name="email" placeholder="Email" required class="custom-width"/>
-
-        </div>
-
-        <div style="display: flex; justify-content: center; flex-direction: column;" >
-            <label for="message">Message (Optional)</label>
-            <textarea
-                class="message-input custom-width"
-              id="message"
-              name="message"
-              placeholder="Message"
-              class="custom-width"
-            ></textarea>
-
-        </div>
-
-
-        <button type="submit" style="margin-top: 10px;">Send</button>
-    </form>
+    
 
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="main.js"></script>
