--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-        <div class="section black-background opaque-bg" style="background-image: url('/assets/pexels-jvdm-1457842.jpg'); background-position: top 50% left 25%;">
+        <div class="section black-background opaque-bg" style="background-image: url('assets/livingroom3.jpg'); background-position: top 50% left 25%;">
             <div class="container">
                 <h2 class="section-title">What Is HomeMind?</h2>
                 <div class="paragraph">
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="section opaque-bg-white" style="background-image: url('/assets/image1_preflightchecklist_packinglist.avif');">
+        <div class="section opaque-bg-white" style="background-image: url('assets/assortedobjects.avif');">
 
             <div class="container">
                 <h2 class="section-title">Who Is It For?</h2>
@@ -34,7 +34,7 @@
         </div>
 
 
-        <div class="section black-background opaque-bg" style="background-image: url('/assets/360_F_1041679059_LnhR8cp75zvx9ZzMTZd7R5qATdVKUD7o.jpg');">
+        <div class="section black-background opaque-bg" style="background-image: url('assets/clutteredroom.jpg')">
             <div class="container">
                 <h2 class="section-title">How HomeMind Helps</h2>
                 <div class="paragraph">
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="section opaque-bg-white" style="background-image: url('/assets/pexels-fotoaibe-1571458.jpg');">
+        <div class="section opaque-bg-white" style="background-image: url('assets/livingroom2.jpg');">
             <div class="container">
                 <h2 class="section-title">Why It Matters</h2>
                 <div class="paragraph">
